--- a/package.json
+++ b/package.json
@@ -11,25 +11,30 @@
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
     "@expo/webpack-config": "^0.17.2",
+    "@expo/xdl": "^59.2.1",
     "@react-navigation/bottom-tabs": "^6.5.1",
     "@react-navigation/native": "^6.1.1",
+    "@react-navigation/stack": "^6.3.10",
     "@ui-kitten/components": "^5.1.2",
     "@ui-kitten/eva-icons": "^5.1.2",
-    "expo": "~47.0.8",
+    "expo": "^47.0.0",
+    "expo-cli": "^6.0.8",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
-    "typescript": "^4.6.3"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   },
   "private": true
 }
